# stellar-dark-pool

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  PHALA.md  README.md  RESEARCH.md  TEE.md  TODO.md  TUTORIAL.md  demo.sh  docker-compose.phala.yml  docker-compose.yml  test_e2e_docker.sh  test_e2e_full.sh
contracts/settlement/: Cargo.toml  README.md  test_contract.sh
contracts/settlement/src/: events.rs  lib.rs  storage.rs  storage_types.rs  test.rs  types.rs
contracts/settlement/test_snapshots/test/: test_constructor.1.json  test_deposit.1.json  test_deposit_balance_storage.1.json  test_get_settlement_not_found.1.json  test_get_trade_history.1.json  test_get_trade_history_limit.1.json  test_set_matching_engine.1.json  test_settle_trade_insufficient_balance.1.json  test_settle_trade_matching_engine_authorization.1.json  test_settle_trade_multiple_times_same_trade_id.1.json  test_settle_trade_success.1.json  test_settle_trade_unauthorized.1.json  test_settle_trade_with_fees.1.json
docs/: ARCHITECTURE.md  TEE.md
matching-engine/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pytest.ini  requirements.txt  test_matching_engine.sh
matching-engine/src/: api.py  config.py  engine.py  main.py  orderbook.py  stellar.py  types.py
matching-engine/tests/: README.md  __init__.py  conftest.py  test_api.py  test_engine.py  test_orderbook.py  test_signature.py
scripts/: compute_compose_hash.py  demo_remote_tee.sh  sign_order.py  verify_remote_attestation.py
